Fixed issue with card control buttons not showing up anymore

--- a/public/stylesheets/card-panel.less
+++ b/public/stylesheets/card-panel.less
@@ -71,17 +71,6 @@
 	.synced {
 		display: none;
 		opacity: 0;
-
-		.collapsed&[name="expandCard"],
-		:not(.collapsed)&[name="collapseCard"] {
-			display: block;
-			position: absolute;
-			left: 0;
-			top: 0;
-			width: 100%;
-			height: 100%;
-			z-index: 10;
-		}
 	}
 	
 	.panel-title {
