--- a/public/stylesheets/search.less
+++ b/public/stylesheets/search.less
@@ -3,6 +3,7 @@
 .cardsInList .synced[name="removeCard"],
 .cardSelection .synced[name="addCard"] {
 	display: inline-block;
+	opacity: 1;
 }
 .cardsInList,
 .cardSelection {
