--- a/public/stylesheets/showroom.less
+++ b/public/stylesheets/showroom.less
@@ -29,3 +29,20 @@ video {
 	right: 0;
 	top: 0;
 }
+
+
+
+.panel {
+	.synced {
+		.collapsed&[name="expandCard"],
+		:not(.collapsed)&[name="collapseCard"] {
+			display: block;
+			position: absolute;
+			left: 0;
+			top: 0;
+			width: 100%;
+			height: 100%;
+			z-index: 10;
+		}
+	}
+}
